fix mobile menu dropdown subitems overflow, make the generic search icon wcag accessible

--- a/src/sources/forus-webshop/scss/_common/sections/blocks/block-sticky-footer.scss
+++ b/src/sources/forus-webshop/scss/_common/sections/blocks/block-sticky-footer.scss
@@ -68,6 +68,7 @@ $footer_base_font: 'Open Sans', arial, sans-serif;
             }
 
             .sticky-footer-dropwdown-subitems {
+                overflow: scroll;
                 position: absolute;
                 bottom: 70px;
                 width: 90%;
